--- a/resources/public/movie-list.html
+++ b/resources/public/movie-list.html
@@ -5,7 +5,7 @@
     <title>Movie List</title>
     
     <script type="text/javascript" 
-            src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js">
+            src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js">
     </script>
         
     <script type="text/javascript">
@@ -27,12 +27,12 @@
         function gotoSelection(movie) {
           //$.getJSON("/api/movie/en/", renderMovies); 
           console.log(movie);
-          var str="/api/movie/en/";
+          var str="http://www.mooviefish.com/api/movie/en/";
           str += movie.id;
           console.log(str);                      
         }
         function getMovies() {
-          $.getJSON("/api/movies/en", renderMovies);                        
+          $.getJSON("http://www.mooviefish.com/api/movies/en", renderMovies);                        
         }
         function handleError(xhr) { 
           $('#error').text(xhr.statusText + ": " + xhr.responseText);
