--- a/site-template/ru/cinema.selmer.html
+++ b/site-template/ru/cinema.selmer.html
@@ -74,7 +74,7 @@
                         <li>
                             <div class="movie-entry"> 
                                 <div class="title">{{n.title}}</div>
-                                <img src={{n.img}}>
+                                <img src="{{n.img}}">
                                 <div class="year-released">год: {{n.year-released}}</div>
                                 <div class="duration">время: {{n.duration}}</div>
                                 <br/>
