--- a/site-template/ru/cinema.selmer.html
+++ b/site-template/ru/cinema.selmer.html
@@ -115,10 +115,10 @@
 			<div class="footer">
             <div class="copyright">&copy; 2014 MoovieFish</div>   
             <ul class="socials">
-                <li class="vk"><a href=""><img src="images/vk.png" /></a></li>
-                <li class="lj"><a href=""><img src="images/lj.png" /></a></li>
-                <li class="fb"><a href=""><img src="images/fb.png" /></a></li>
-                <li class="ok"><a href=""><img src="images/ok.png" /></a></li>
+				<li class="vk"><a href="http://vk.com/club74637279/"><img src="images/vk.png" /></a></li>
+				<li class="lj"><a href="http://mooviefish.livejournal.com/"><img src="images/lj.png" /></a></li>
+				<li class="fb"><a href="https://www.facebook.com/groups/266837963509823/"><img src="images/fb.png" /></a></li>
+				<li class="ok"><a href="http://www.odnoklassniki.ru/group/51966989238419/"><img src="images/ok.png" /></a></li>
             </ul>
             <div class="email">mooviefish@gmail.com</div>
             </div>
