--- a/site-template/ru/cinema.selmer.html
+++ b/site-template/ru/cinema.selmer.html
@@ -24,7 +24,7 @@
                 <ul class="topmenu">
                     <li><a href="/ru/">главная</a></li>
                     <li> <a id="active" href="/ru/cinema.html">кинозал</a></li>
-                    <li><a href="/ru/help.html">помощь и контакты</a></li>
+                    <li><a href="/ru/help.html">демо</a></li>
                 </ul>
             </div>
         </div> 
