--- a/site-template/ru/cinema.selmer.html
+++ b/site-template/ru/cinema.selmer.html
@@ -106,14 +106,14 @@
             </div>
           
 			<div class="footer">
-            <div class="copyright">&copy; 2014 MoovieFish</div>   
+            <div class="copyright">&copy; 2014 MovieLex</div>   
             <ul class="socials">
 				<li class="vk"><a href="http://vk.com/club74637279"><img src="images/vk.png" /></a></li>
-				<li class="lj"><a href="http://mooviefish.livejournal.com/"><img src="images/lj.png" /></a></li>
+				<li class="lj"><a href="http://movielex.livejournal.com/"><img src="images/lj.png" /></a></li>
 				<li class="fb"><a href="https://www.facebook.com/groups/266837963509823"><img src="images/fb.png" /></a></li>
 				<li class="ok"><a href="http://www.odnoklassniki.ru/group/51966989238419"><img src="images/ok.png" /></a></li>
             </ul>
-            <div class="email">mooviefish@gmail.com</div>
+            <div class="email">movielex.com@gmail.com</div>
             </div>
 
         </div> <!-- wrap -->
