--- a/site-template/ru/cinema.selmer.html
+++ b/site-template/ru/cinema.selmer.html
@@ -3,7 +3,7 @@
 
 <html lang="ru">
     <head>
-        <title>MoovieFish - Кинозал</title>
+        <title>MovieLex - Кинозал</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
           
@@ -17,14 +17,15 @@
         <div class="menu">
             <div class="logo">
                 <a href="/ru/">
-                    <img src="images/logo.png" width=150% height=150% />
+                    <img src="images/logo.svg" width=150% height=150% />
                 </a>
             </div>
             <div>
                 <ul class="topmenu">
                     <li><a href="/ru/">главная</a></li>
                     <li> <a id="active" href="/ru/cinema.html">кинозал</a></li>
-                    <li><a href="/ru/help.html">демо</a></li>
+                    <li><a href="/ru/help.html">помощь и контакты</a></li>
+                    <li> <a href="/ru/demo.html">демо</a></li>
                 </ul>
             </div>
         </div> 
@@ -87,7 +88,6 @@
 
              </div>  
             </div> 
-
             <div class="hr960"> <hr/> </div>
 
             <div class="saveandgo">
@@ -109,7 +109,7 @@
             <div class="copyright">&copy; 2014 MovieLex</div>   
             <ul class="socials">
 				<li class="vk"><a href="http://vk.com/club74637279"><img src="images/vk.png" /></a></li>
-				<li class="lj"><a href="http://movielex.livejournal.com/"><img src="images/lj.png" /></a></li>
+				<li class="lj"><a href="http://mooviefish.livejournal.com/"><img src="images/lj.png" /></a></li>
 				<li class="fb"><a href="https://www.facebook.com/groups/266837963509823"><img src="images/fb.png" /></a></li>
 				<li class="ok"><a href="http://www.odnoklassniki.ru/group/51966989238419"><img src="images/ok.png" /></a></li>
             </ul>
