--- a/site-template/ru/cinema.selmer.html
+++ b/site-template/ru/cinema.selmer.html
@@ -31,7 +31,7 @@
         </div> 
       
         <div class="header-promo-cinema">
-            <a href="http://movielex.com/files/MovieLexApp-release.apk" class="upload-btn topupload">
+            <a href="http://play.google.com/store/apps/details?id=com.movielex.movielexapp" class="upload-btn topupload">
                 <img src="images/upload.png">
             </a>
         </div>
@@ -92,7 +92,7 @@
 
             <div class="saveandgo">
                
-                <a class="upload-btn" href="http://movielex.com/files/MovieLexApp-release.apk">
+                <a class="upload-btn" href="http://play.google.com/store/apps/details?id=com.movielex.movielexapp">
                     <img src="images/upload.png" />
                 </a>
                 <div class="gotocinema">
