--- a/site-template/ru/cinema.selmer.html
+++ b/site-template/ru/cinema.selmer.html
@@ -42,7 +42,7 @@
               
         <div class="columnContainer">
                 <div class="column" id="left" >
-                    <h1>Наш кинозал</h1>
+                    <h1>Наши фильмы</h1>
                     <ul class="left-movies">
                         {% for m in active-movies %}
                         <li>
@@ -65,7 +65,7 @@
                     </ul>
                 </div>
                 <div class="column" id="right">
-                    <h1>Скоро в кино</h1>
+                    <h1>Наши фильмы</h1>
                  
                     <ul class="right-movies">
                         {% for n in new-movies %}
