--- a/site-template/ru/cinema.selmer.html
+++ b/site-template/ru/cinema.selmer.html
@@ -15,20 +15,27 @@
         <div class="wrap">
         
         <div class="menu">
-            <div class="logo">
-                <a href="/ru/">
-                    <img src="http://movielex.com/ru/images/logo.svg" width=150% height=150% />
-                </a>
+                <table class="topmenu-table" border="0" cellpadding="2" cellspacing="0" width="100%">
+                    <tr>
+                    <td style="width: 100px">
+                    <div class="logo">
+                    <a href="/ru/">
+                        <img src="images/logo.svg" width=150% height=150% />
+                    </a>
+                    </div>
+                    </td>      
+                    <td style="width: 50px;padding-top: 10px;" align="center" ><a style="color: #eee" href="/ru/index.html">главная</a></td>
+                    <td style="width: 50px;padding-top: 10px;" align="center" ><a style="color: orange" href="/api/cinema-page/ru">кинозал</a></td>
+                    <td style="width: 100px;padding-top: 10px;" align="center" ><a style="color: #eee" href="/ru/help.html">помощь и контакты</a></td>
+                    <td style="width: 50px;padding-top: 10px;" align="center" ><a style="color: #eee" href="/ru/demo.html">демо</a></td>
+                    <td style="width: 200px;padding-top: 10px;" align="center"><a style="color: #eee" href=""></a></td>
+                    <td style="width: 50px;padding-top: 10px;" align="center" ><a href="/ru/index.html">
+                            <img src="http://movielex.com/files/flags/flag-ru.png" style="height: 20px;width: 20px;" alt="ru"/></a></td>
+                    <td style="width: 50px;padding-top: 10px;" align="center" ><a href="/en/index.html">
+                            <img src="http://movielex.com/files/flags/flag-en.png" style="height: 20px;width: 20px;"/></a></td>
+                    </tr>
+                </table>
             </div>
-            <div>
-                <ul class="topmenu">
-                    <li><a href="/ru/">главная</a></li>
-                    <li> <a id="active" href="/ru/cinema.html">кинозал</a></li>
-                    <li><a href="/ru/help.html">помощь и контакты</a></li>
-                    <li> <a href="/ru/demo.html">демо</a></li>
-                </ul>
-            </div>
-        </div> 
       
         <div class="header-promo-cinema">
             <a href="http://play.google.com/store/apps/details?id=com.movielex.movielexapp" class="upload-btn topupload">
